[572022] Tomcat cannot be started from Eclipse under Java 16